# oglm

./: .gitignore  CMakeLists.txt  README.md  build-commons.cmd  build-libs.cmd  build.cmd
cmake/: temp.txt  template.vcxproj.user.in
docs/: blend.txt  check.py  docs.txt  quads.py  recs.cpp  unused.txt  wval.cpp
ogl/: CMakeLists.txt  rect.txt  rect_.txt  temp.txt
ogl/src/: ogl.cpp
opengl32/: CMakeLists.txt
opengl32/src/: libpng16_static.lib  libpng16_staticd.lib  opengl32.cpp  opengl32.def  zlibstatic.lib  zlibstaticd.lib
test/: test.cmd  test.cpp  test.txt
utils/: gx.h  helper.h  mm_alloc.h  mx.h  pnglite.c  pnglite.h  simd.h  timer.h  types.h
